<resources>
    <string name="app_name">PgUserDemoApp</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_enter_otp">Enter OTP</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="title_verify_otp">Verify OTP</string>
    <string name="title_get_otp">Get OTP</string>
    <string name="error_invalid_email">Invalid Email...</string>
    <string name="error_empty_email">Enter your email id...</string>
    <string name="hint_full_name">Full Name*</string>
    <string name="hint_alternate_mobile_number">Whatsapp/Alternate Number</string>
    <string name="hint_email">Email id*</string>
    <string name="title_occupation">Occupation</string>
    <string name="title_student">Student</string>
    <string name="title_working">Working</string>
    <string name="hint_institute_address">Area of Institute/Office</string>
    <string name="hint_name_of_institute">Name of Institute/Office</string>
    <string name="hint_institute_id">College/Office Id Number</string>
    <string name="title_date_of_joining">Date of Joining</string>
    <string name="title_next">Next</string>
    <string name="hint_person_one">Person 1*</string>
    <string name="hint_person_two">Person 2*</string>
    <string name="hint_permanent_address">Permanent Address*</string>
    <string name="hint_city">City*</string>
    <string name="hint_state">State*</string>
    <string name="hint_zip">Zip*</string>
    <string name="title_same_as_above">Same as above</string>
    <string name="hint_current_address">Current Address</string>
    <string name="title_basic_info">Basic Info</string>
    <string name="title_emergency_info">Emergency Info</string>
    <string name="title_id_proof">Id Proof</string>
    <string name="title_finger_print">Finger Print</string>
    <string name="error_invalid_phone">Please enter 10 digit mobile number</string>
    <string name="error_empty_phone">Please enter your phone number</string>
    <string name="title_date_of_birth">Date of birth</string>
    <string name="title_capture_selfie">Capture a selfie</string>
    <string name="title_tap_here">Tap Here</string>
    <string name="hint_aadhar_number">Aadhar Number*</string>
    <string name="title_or">Or</string>
    <string name="title_upload_aadhar">Upload Aadhar*</string>
    <string name="title_upload_aadhar_description">PDF less than 2 mb \t\t  JPG less than 50kb</string>
    <string name="title_proof2">Proof 2</string>
    <string name="title_upload_proof">Upload Proof</string>
    <string name="title_complete">Complete</string>
    <string name="title_login">Login</string>
    <string name="title_error_name">Name Can\'t be blank</string>
    <string name="title_error_dob">Date Of Birth can\'t be empty</string>
    <string name="title_error_mobile">Mobile number is mandotary</string>
    <string name="title_incorrect_mobile">ENter 10 digit mobile number</string>
    <string name="title_error_email">Email id is mandotary</string>
    <string name="title_incorrect_email">Enter correct email id</string>
    <string name="title_error_joining_date">Please select joining date</string>


    <string name="title_cancel">Cancel</string>
    <string name="title_intimate">Intimate</string>
    <string name="title_complaint">My Complaints</string>
    <string name="title_visitor_log">Visitor Log</string>
    <string name="title_vacate">Vacate</string>
    <string name="title_new">New</string>
    <string name="title_my_logs">My Logs</string>
    <string name="title_my_room">My Room</string>
    <string name="title_send">Send</string>
    <string name="tittle_sent">Sent</string>
    <string name="title_return_pg">Return to Pg?*</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>Q
    <string name="title_no_list">No List Available</string>
    <string name="title_no_unresolve">No Unresolved complaint</string>
    <string name="title_no_resolve">No Resolved complaint</string>
    <string name="title_late_entry">Late Entry</string>
    <string name="title_vacate_pg">Vacate PG</string>
    <string name="title_wakeup_pg">Wakeup PG</string>
    <string name="title_vacate_pg_info">Vacate PG Information</string>
    <string name="title_unresolved">Unresolved</string>
    <string name="title_resolved">Resolved</string>
    <string name="title_product">Product*</string>
    <string name="title_not_working">Not Working</string>
    <string name="title_sustainable_proof">Sustainable Proof</string>
    <string name="title_if_any">(if any)</string>
    <string name="title_register">Register</string>
    <string name="title_registeration">Registeration</string>
    <string name="title_logs">Logs</string>
    <string name="title_staying_overnight">Staying Overnight*</string>
    <string name="title_check_in">Check-in</string>
    <string name="title_id_proof_comp">Id Proof*</string>
    <string name="title_proof_size_text">PDF less than 2MB    Jpg less than 50KB</string>
    <string name="title_visitor_name">Visitor Name</string>
    <string name="title_staying">Staying</string>
    <string name="title_remind">Remind</string>
    <string name="title_send_otp">Send OTP</string>
    <string name="title_already_member">Already a Member?</string>
    <string name="title_login_now">Login Now</string>
    <string name="title_intro_screen_one">Easy and safe online Registration</string>
    <string name="title_intro_screen_two">Easily communicate with the manager regarding complaints</string>
    <string name="title_reason">Reason - </string>
    <string name="title_approved">Approved</string>
    <string name="title_breakfast">Breakfast (7am - 10am)</string>
    <string name="title_lunch">Lunch (1pm - 2:30pm)</string>
    <string name="title_dinner">Dinner (8:30pm - 9:30pm)</string>

    <string name="hint_reason">Reason for Delay*</string>
    <string name="hint_reaching_time">Approx reaching time*</string>
    <string name="hint_vacate_pg_date">Date of Vacating*</string>
    <string name="hint_reason_vacating">Reason For Vacating*</string>
    <string name="hint_complaint_description">Complaint description</string>
    <string name="hint_visitor_name">Visitor name*</string>
    <string name="hint_visitor_number">Visitor Number*</string>
    <string name="hint_upload_proof">Upload Proof*</string>

    <string name="check_accept">I Accept</string>
    <string name="input_only_number">0123456789</string>
    <string name="no_internet_connection">No internet connection.</string>


</resources>
