<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View" />
        <variable
            name="vacateViewModel"
            type="com.task.pguserdemoapp.ui.vacatepg.VacateViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="?attr/actionBarSize"
>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLogRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutVisitorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:minHeight="58.67dp"
                android:background="@drawable/rounded_corner_trans_back"
                app:layout_constraintTop_toTopOf="parent"
                >

                <EditText
                    android:id="@+id/EditTextVisitorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingTop="@dimen/padding_5"
                    android:hint="@string/hint_visitor_name"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_18_67" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutVisitorNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:minHeight="58.67dp"
                android:background="@drawable/rounded_corner_trans_back"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutVisitorName"
                >

                <EditText
                    android:id="@+id/EditTextVisitorNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/padding_5"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/hint_visitor_number"
                    android:imeOptions="actionNext"
                    android:paddingTop="@dimen/padding_5"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_18_67" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewStayingOvernight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:gravity="start"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/title_staying_overnight"
                android:textSize="@dimen/text_size_18_67"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutVisitorNumber"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <RadioGroup
                android:id="@+id/radioGroupStayingOvernight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/textViewStayingOvernight"
                app:layout_constraintLeft_toRightOf="@+id/textViewStayingOvernight"
                app:layout_constraintTop_toTopOf="@+id/textViewStayingOvernight">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_15"
                    android:textColor="@color/bland50colorBlack"
                    android:textSize="@dimen/text_size_18_67"
                    android:text="@string/title_yes" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_15"
                    android:textColor="@color/bland50colorBlack"
                    android:textSize="@dimen/text_size_18_67"
                    android:text="@string/title_no" />
            </RadioGroup>
            <TextView
                android:id="@+id/spinnerIdProof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/rounded_corner_trans_back"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_20"
                android:paddingRight="@dimen/margin_20"
                android:hint="@string/title_id_proof_comp"
                android:minHeight="58.67dp"
                android:textSize="@dimen/text_size_18_67"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupStayingOvernight"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUploadProof"
                android:layout_width="match_parent"
                android:layout_height="58.67dp"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/rounded_corner_trans_back"
                app:layout_constraintTop_toBottomOf="@+id/spinnerIdProof"
                >

                <EditText
                    android:id="@+id/EditTextUploadProof"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="@dimen/padding_5"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/hint_upload_proof"
                    android:imeOptions="actionNext"
                    android:paddingTop="@dimen/padding_5"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_18_67" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textViewProofSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginStart="@dimen/margin_4"
                android:text="@string/title_proof_size_text"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUploadProof"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/textViewUploadPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:gravity="left"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/title_capture_selfie"
                android:textSize="@dimen/text_size_18_67"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@+id/textViewProofSize"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <ImageView
                android:id="@+id/imageViewSelfie"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:background="@drawable/rounded_corner_grey"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@+id/textViewUploadPhoto" />

            <ImageView
                android:id="@+id/imageViewCameraSelfie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewSelfie"
                app:layout_constraintEnd_toEndOf="@+id/imageViewSelfie"
                app:layout_constraintStart_toStartOf="@+id/imageViewSelfie"
                app:layout_constraintTop_toTopOf="@+id/imageViewSelfie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/title_tap_here"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@+id/imageViewCameraSelfie"
                app:layout_constraintStart_toStartOf="@+id/imageViewCameraSelfie"
                app:layout_constraintTop_toBottomOf="@+id/imageViewCameraSelfie" />
            <Button
                android:id="@+id/buttonCheckIn"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="@dimen/margin_20"
                android:textColor="@color/colorBlack"
                android:background="@drawable/rounded_corner_submit_button"
                android:textAllCaps="false"
                android:text="@string/title_check_in"
                android:textSize="@dimen/text_size_21_33"
                app:layout_constraintTop_toBottomOf="@+id/imageViewSelfie" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>